[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.5.0"
gradio-webrtc = "^0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"